--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   },
   "dependencies": {
     "@coinbase/onchainkit": "latest",
+    "@tanstack/react-query": "^5",
     "next": "14.2.15",
+    "next-pwa": "^5.6.0",
     "react": "^18",
     "react-dom": "^18",
-    "@tanstack/react-query": "^5",
     "viem": "^2.17.4",
     "wagmi": "^2.11.0"
   },
