--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,20 +2,36 @@
   "name": "Buy & Earn",
   "short_name": "Buy & Earn",
   "description": "Buy and earn yield on Base",
-  "start_url": "/?standalone=true",
+  "start_url": "/",
+  "id": "/",
   "display": "standalone",
+  "display_override": ["window-controls-overlay", "standalone"],
   "background_color": "#1a1a1a",
   "theme_color": "#1a1a1a",
   "orientation": "portrait",
   "scope": "/",
   "dir": "ltr",
   "lang": "en-US",
-  "display_override": ["standalone", "fullscreen"],
   "categories": ["finance", "utilities"],
   "launch_handler": {
-    "client_mode": ["navigate-existing", "auto"]
+    "client_mode": ["focus-existing", "auto"]
   },
   "prefer_related_applications": false,
+  "handle_links": "preferred",
+  "shortcuts": [
+    {
+      "name": "Buy USDC",
+      "url": "/?token=USDC",
+      "description": "Buy USDC on Base",
+      "icons": [{ "src": "/icons/usdc.png", "sizes": "96x96" }]
+    },
+    {
+      "name": "Buy Bitcoin",
+      "url": "/?token=cbBTC",
+      "description": "Buy Bitcoin on Base",
+      "icons": [{ "src": "/icons/btc.png", "sizes": "96x96" }]
+    }
+  ],
   "icons": [
     {
       "src": "/icons/icon-72x72.png",
@@ -64,18 +80,6 @@
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
-    }
-  ],
-  "shortcuts": [
-    {
-      "name": "Buy USDC",
-      "url": "/?token=USDC",
-      "icons": [{ "src": "/icons/usdc.png", "sizes": "96x96" }]
-    },
-    {
-      "name": "Buy Bitcoin",
-      "url": "/?token=cbBTC",
-      "icons": [{ "src": "/icons/btc.png", "sizes": "96x96" }]
     }
   ]
 } 
